--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^3.4.0",
     "astro": "^4.6.1",
-    "canvas-confetti": "^1.9.2"
+    "canvas-confetti": "^1.9.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
