--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@astrojs/react": "^3.4.0",
+    "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.6.1",
     "canvas-confetti": "^1.9.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.10"
   }
 }
