--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "canvas-confetti": "^1.9.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "tailwindcss": "^3.4.10"
   }
 }
