--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "extends": "astro/tsconfigs/base",
   "compilerOptions": {
+    "baseUrl": "./",
     "paths": {
-      "@ui-rn/*": [
-        "./public/interfaces-mobile/*"
-      ]
+      "@src/*": [
+        "src/*"
+      ],
     }
   }
 }
