--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^4.3.0",
-    "@astrojs/tailwind": "^6.0.2",
-    "astro": "^5.12.8",
+    "@astrojs/react": "^4.4.2",
+    "@tailwindcss/vite": "^4.1.18",
+    "astro": "^5.16.15",
     "canvas-confetti": "^1.9.2",
+    "gsap": "^3.14.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^4.1.18"
   }
 }
