--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@astrojs/react": "^4.4.2",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.15",
-    "canvas-confetti": "^1.9.2",
     "gsap": "^3.14.2",
+    "mathjs": "^14.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
